[gd_scene load_steps=29 format=2]

[ext_resource path="res://HealthBar/HealthBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Character/Character.gd" type="Script" id=2]
[ext_resource path="res://Utils/HitArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://Utils/UnitDetector.tscn" type="PackedScene" id=4]
[ext_resource path="res://Character/Skills/SkillHandler.gd" type="Script" id=5]
[ext_resource path="res://Assets/Character/shadow.png" type="Texture" id=6]
[ext_resource path="res://Utils/Attributes/Scripts/Res/Radius/AttrResRadius.gd" type="Script" id=7]
[ext_resource path="res://Utils/Attributes/Attributes.tscn" type="PackedScene" id=8]
[ext_resource path="res://Utils/Attributes/Scripts/Res/Primary/AttrResPrimary.gd" type="Script" id=9]
[ext_resource path="res://Utils/UnitSelector.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Effects/target.png" type="Texture" id=11]
[ext_resource path="res://BT/BehaviorTree.gd" type="Script" id=12]
[ext_resource path="res://Character/StateDebug.gd" type="Script" id=13]
[ext_resource path="res://Utils/Attributes/Scripts/Res/Stats/AttrResStats.gd" type="Script" id=14]
[ext_resource path="res://Assets/Character/smoke.png" type="Texture" id=15]

[sub_resource type="Resource" id=14]
resource_local_to_scene = true
script = ExtResource( 9 )
unit_team = 0
unit_type = 0
mirror_mode = false

[sub_resource type="Resource" id=15]
resource_local_to_scene = true
script = ExtResource( 14 )
health = 0.0
max_health = 0.0
health_regeneration_rate = 0.0
health_regeneration_step = 0.0
mana = 0.0
max_mana = 0.0
mana_regeneration_rate = 0.0
mana_regeneration_step = 0.0
move_speed = 0.0
move_acceleration = 0.0
attack_speed = 0.0
damage = 0.0

[sub_resource type="Resource" id=16]
resource_local_to_scene = true
script = ExtResource( 7 )
collision_size = 5.0
attack_range = 0.0
unit_detection = 1000.0
area_selection = 10.0
hurt_area = {
"height": 0.0,
"radius": 0.0
}

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;
render_mode blend_premul_alpha;

// This shader only works properly with premultiplied alpha blend mode
uniform float aura_width = 2.0;
uniform vec4 aura_color : hint_color;

void fragment() {
	vec4 col = texture(TEXTURE, UV);
	vec2 ps = TEXTURE_PIXEL_SIZE;
	float a;
	float maxa = col.a;
	float mina = col.a;

	a = texture(TEXTURE, UV + vec2(0.0, -aura_width) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV + vec2(0.0, aura_width) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV + vec2(-aura_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	a = texture(TEXTURE, UV + vec2(aura_width, 0.0) * ps).a;
	maxa = max(a, maxa);
	mina = min(a, mina);

	col.rgb *= col.a;

	COLOR = col;
	COLOR.rgb += aura_color.rgb * (maxa - mina);
}"

[sub_resource type="ShaderMaterial" id=10]
resource_local_to_scene = true
shader = SubResource( 9 )
shader_param/aura_width = 0.0
shader_param/aura_color = Color( 1, 1, 1, 1 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 67, 58 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 15 )
region = Rect2( 67, 0, 67, 58 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 15 )
region = Rect2( 134, 0, 67, 58 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 15 )
region = Rect2( 201, 0, 67, 58 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 15 )
region = Rect2( 268, 0, 67, 58 )

[sub_resource type="SpriteFrames" id=22]
animations = [ {
"frames": [ null, null, SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), null, null, null, null, null, null, null, null ],
"loop": true,
"name": "default",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=12]
resource_local_to_scene = true

[sub_resource type="CircleShape2D" id=13]
resource_local_to_scene = true

[node name="Character" type="KinematicBody2D" groups=["units"]]
collision_layer = 256
collision_mask = 768
collision/safe_margin = 1.0
script = ExtResource( 2 )

[node name="Attributes" parent="." instance=ExtResource( 8 )]
primary = SubResource( 14 )
stats = SubResource( 15 )
radius = SubResource( 16 )

[node name="Skills" type="Node" parent="."]
script = ExtResource( 5 )

[node name="BehaviorTree" type="Node" parent="."]
script = ExtResource( 12 )
agent = NodePath("..")

[node name="BehaviorAnimPlayer" type="AnimationPlayer" parent="."]
playback_default_blend_time = 0.3

[node name="AbilityAnimPlayer" type="AnimationPlayer" parent="."]

[node name="HUD" type="Position2D" parent="."]
z_index = 10
z_as_relative = false

[node name="HealthBar" parent="HUD" instance=ExtResource( 1 )]
visible = false
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="StateDebug" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -31.0
margin_top = -14.0
margin_right = 169.0
rect_min_size = Vector2( 200, 0 )
rect_scale = Vector2( 0.3, 0.3 )
text = "null"
align = 1
valign = 1
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection" type="Line2D" parent="HUD"]
visible = false
position = Vector2( -8.5, -5.4 )
scale = Vector2( 1.7, 1.8 )
z_as_relative = false
points = PoolVector2Array( 0, 2, 0, 0, 3, 0, 3, -1, 7, -1, 7, 0, 10, 0, 10, 2, 14, 2, 14, 4, 10, 4, 10, 6, 7, 6, 7, 7, 3, 7, 3, 6, 0, 6, 0, 4, -4, 4, -4, 2, 0, 2 )
width = 1.0
default_color = Color( 0.00784314, 0.678431, 0.0666667, 1 )

[node name="Polygon2D" type="Polygon2D" parent="HUD/Selection"]
z_index = -1
z_as_relative = false
color = Color( 0, 1, 0, 0.235294 )
polygon = PoolVector2Array( 0, 0, 3, 0, 3, -1, 7, -1, 7, 0, 10, 0, 10, 2, 14, 2, 14, 4, 10, 4, 10, 6, 7, 6, 7, 7, 3, 7, 3, 6, 0, 6, 0, 4, -4, 4, -4, 2, 0, 2, 0, 0 )

[node name="TextureContainer" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="TextureContainer"]
material = SubResource( 10 )

[node name="Shadow" type="Sprite" parent="TextureContainer"]
modulate = Color( 1, 1, 1, 0.168627 )
show_behind_parent = true
texture = ExtResource( 6 )

[node name="Smoke" type="AnimatedSprite" parent="TextureContainer"]
modulate = Color( 0, 0, 0, 0.313726 )
position = Vector2( -17.9263, -4.5 )
scale = Vector2( 0.838021, 0.844828 )
frames = SubResource( 22 )
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 12 )

[node name="UnitSelector" parent="." instance=ExtResource( 10 )]
visible = false
monitorable = false

[node name="CollisionShape2D" parent="UnitSelector" index="0"]
shape = SubResource( 13 )

[node name="UnitDetector" parent="." instance=ExtResource( 4 )]
visible = false

[node name="HitArea" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, -12 )
collision_mask = 65536

[node name="AimPoint" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
z_index = 1
texture = ExtResource( 11 )

[editable path="UnitSelector"]
